--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div class="body">
+
+  <body class="body">
+    <div class="title">
+      Welcome to Snake On Board Game!
       <div id="HighScoreBox">HIGH SCORE : 0</div>
       <div id="scoreBox">Score : 0</div>
       <div id="board"></div>
